@@ -78,14 +78,10 @@ static void st_thread_exit(void)
   pthread_exit(NULL);
 }
 
-static void st_thread_kill(st_thread_id thr)
+static void st_thread_join(st_thread_id thr)
 {
-#if !defined(__ANDROID__)
-  /* pthread_cancel is unsafe, as it does not allow the thread an opportunity
-     to free shared resources such as mutexes. Thus, it is not implemented
-     in Android's libc. */
-  pthread_cancel(thr);
-#endif
+  pthread_join(thr, NULL);
+  /* best effort: ignore errors */
 }
 
 /* Scheduling hints */
@@ -317,6 +313,9 @@ static void st_check_error(int retcode, char * msg)
   raise_sys_error(str);
 }
 
+/* Variable used to stop the "tick" thread */
+static volatile int caml_tick_thread_stop = 0;
+
 /* The tick thread: posts a SIGPREEMPTION signal periodically */
 
 static void * caml_thread_tick(void * arg)
@@ -327,11 +326,7 @@ static void * caml_thread_tick(void * arg)
   /* Block all signals so that we don't try to execute an OCaml signal handler*/
   sigfillset(&mask);
   pthread_sigmask(SIG_BLOCK, &mask, NULL);
-#if !defined(__ANDROID__)
-  /* Allow async cancellation */
-  pthread_setcanceltype(PTHREAD_CANCEL_ASYNCHRONOUS, NULL);
-#endif
-  while(1) {
+  while(! caml_tick_thread_stop) {
     /* select() seems to be the most efficient way to suspend the
        thread for sub-second intervals */
     timeout.tv_sec = 0;
@@ -342,7 +337,7 @@ static void * caml_thread_tick(void * arg)
      caml_record_signal(). */
     caml_record_signal(SIGPREEMPTION);
   }
-  return NULL;                  /* prevents compiler warning */
+  return NULL;
 }
 
 /* "At fork" processing */
